polar overflow fix progress

--- a/src/style/charts-main.css
+++ b/src/style/charts-main.css
@@ -52,8 +52,10 @@
 /*========================================================================== Legend */
 .legend-block {
     display: flex;
-    justify-content: center;
     height: 100%;
+}
+.legend-block-centered {
+    justify-content: center;
 }
 .legend-block-column {
     flex-direction: column;
